# hasaki

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  app.rc  resources.qrc  vcpkg.json
.github/workflows/: ci.yml
cmake/: llvm.toolchain.cmake
doc/: WinDivert-zh.html
include/hasaki/: ConsoleManager.h  app_settings.h  appsettings.h  console_manager.h  delayed_delete_manager.h  endpoint_mapper.h  mainwindow.h  packet_forwarder.h  port_process_monitor.h  portprocessmonitor.h  process_preset_dialog.h  proxy_server.h  settingsdialog.h  single_instance_manager.h  socks5_client.h  socks5serverdialog.h  tcp_session_manager.h  udp_packet_injector.h  udp_session_manager.h  udptestdialog.h  upstream_client.h  upstreamdialog.h  utils.h
include/hasaki/data/: upstream_data.h
src/: ConsoleManager.cpp  app_settings.cpp  appsettings.cpp  console_manager.cpp  delayed_delete_manager.cpp  endpoint_mapper.cpp  hasaki.rc  main.cpp  mainwindow.cpp  mainwindow.ui  packet_forwarder.cpp  port_process_monitor.cpp  portprocessmonitor.cpp  process_preset_dialog.cpp  process_preset_dialog.ui  proxy_server.cpp  proxy_session.cpp  settings_dialog.cpp  settingsdialog.cpp  settingsdialog.ui  single_instance_manager.cpp  socks5_client.cpp  socks5serverdialog.cpp  socks5serverdialog.ui  tcp_session_manager.cpp  udp_packet_injector.cpp  udp_session_manager.cpp  udptestdialog.cpp  udptestdialog.ui  upstreamdialog.cpp  upstreamdialog.ui  utils.cpp
